added a shaker image
initialized application