@@ -1,0 +1,8 @@
+// Copyright 2002-2011, University of Colorado
+package edu.colorado.phet.sugarandsaltsolutions.intro;
+
+/**
+ * @author Sam Reid
+ */
+public class IntroModel extends SugarAndSaltSolutionModel {
+}
