@@ -1,2 +1,3 @@
+Added a beaker
 added a shaker image
 initialized application
